# weave

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  perplexity-notu.md  shell.nix  tailwind.config.js  test_file.rs  test_meval.rs  update_ai_bridge.py
docs/superpowers/specs/: 2026-06-27-wasm-python-plugins-design.md
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_fend.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  knowledge.rs  mod.rs  models.rs  plugin.rs  session.rs  system.rs
src-tauri/src/core/: ai_bridge.rs  intent_engine.rs  mod.rs  plugin_manager.rs  workflow_engine.rs
src-tauri/src/models/: chat.rs  manifest.rs  mod.rs  plugin.rs
src-tauri/src/plugins/: calc_plugin.rs  canvas_plugin.rs  coder_plugin.rs  file_plugin.rs  git_plugin.rs  http_plugin.rs  memory_plugin.rs  mod.rs  note_plugin.rs  shell_plugin.rs  sqlite_plugin.rs  sys_plugin.rs  web_plugin.rs
src-tauri/src/runtime/: mod.rs  python.rs  wasm.rs
src-tauri/src/utils/: config.rs  errors.rs
src-tauri/tests/: python_runtime_test.rs
src-tauri/tests/fixtures/plugins/echo_python/: main.py  manifest.toml
src/components/canvas/: Canvas.tsx  ContextMenu.tsx  (+3 more)
src/hooks/: useChatStream.ts  usePlugins.ts  useTauriCommand.ts
src/lib/: editorTheme.ts  ipc.ts  utils.ts
src/stores/: useAppStore.ts  useCanvasStore.ts  useChatStore.ts  useModelPreferenceStore.ts  usePluginStore.ts  useThemeStore.ts  useWorkflowStore.ts
src/types/: app.ts  chat.ts  plugin.ts
(+38 files in other folders)
